fix(Modal): spacings changed

--- a/packages/styles/scss/components/modal/_modal.scss
+++ b/packages/styles/scss/components/modal/_modal.scss
@@ -101,7 +101,7 @@ $modal-footer-background-color: $layer-primary !default; //TODO use $layer token
     min-width: 100%;
     //max-height: 100%;
     height: 100%;
-    padding: $spacing-08 3% 0rem 3%;
+    padding: $spacing-08 $spacing-05 0rem $spacing-05;
 
     @include breakpoint('md') {
       height: auto;
@@ -173,9 +173,9 @@ $modal-footer-background-color: $layer-primary !default; //TODO use $layer token
     margin-top: auto;
     text-align: right;
     background-color: $modal-footer-background-color;
-    margin-left: rem(-24px);
-    margin-right: rem(-24px);
-    padding: $spacing-08 $spacing-08;
+    margin-left: -$spacing-05; // rem(-24px);
+    margin-right: -$spacing-05; // rem(-24px);
+    padding: $spacing-05 $spacing-05;
     border-radius: 0 0 $modal-border-radius $modal-border-radius;
     .#{$prefix}--link + .#{$prefix}--btn {
       margin-left: $spacing-05;
